Render apps without associated ports

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
-envlist = py27,py35
+envlist = py27,py36
 
 [testenv]
 usedevelop = True
 extras = test
+deps =
+    pytest
 
 commands =
     pytest --doctest-modules --junitxml=test_report.xml --verbose --cov-report term-missing --cov switch_config_render -s {posargs}
